--- a/styles.css
+++ b/styles.css
@@ -169,15 +169,22 @@ section button {
 
 /* Estiliza o rodapé da página */
 footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: auto;
-    background-color: #F5F7F8; /* Cor de fundo do rodapé */
-    color: #45474B; /* Cor do texto */
-    text-align: center; /* Alinha o texto ao centro */
-    padding: 0; /* Espaçamento interno */
+    background-color: #F5F7F8; 
+    color: #45474B; 
+    text-align: center;
+    padding: 0; 
     padding-bottom: 10px;
-    width: 100%; /* Largura total da página */
-    bottom: 0; /* Alinha ao fundo da página */
-    font-size: 1rem; /* Tamanho da fonte */
+    width: 100%; 
+    bottom: 0; 
+    font-size: 1rem; 
 }
 
 .item-resultado:hover {
